# Uni.HAL

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  context7.json  uni.hal.cmake
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: fun_rcc_map.cmake  fun_rcc_map.py  toolchain_compiler.cmake  toolchain_compiler_gcc.cmake  toolchain_machine_arm_cm7.cmake
cmake/cpm/: cpm-catch2.cmake  cpm-nanoprintf.cmake  cpm-uni.common.cmake
src/: CMakeLists.txt  uni_hal.h
src/adc/: uni_hal_adc.h  uni_hal_adc_c.c  uni_hal_adc_pc.c  uni_hal_adc_stm32h7.c  uni_hal_adc_stm32h7.h  uni_hal_adc_stm32l4.c  uni_hal_adc_stm32l4.h  uni_hal_adc_typedef.h
src/can/: uni_hal_can.h  uni_hal_can_c.c  uni_hal_can_pc.c  uni_hal_can_stm32l4.c
src/core/: uni_hal_core.h  uni_hal_core_cm.c  uni_hal_core_cm7.c  uni_hal_core_cm7.h  uni_hal_core_enum.h  uni_hal_core_pc.c  uni_hal_core_stm32h7.c  uni_hal_core_stm32h7.h  uni_hal_core_stm32l4.c
src/crc/: uni_hal_crc.h  uni_hal_crc_c.c  uni_hal_crc_common.c  uni_hal_crc_pc.c  uni_hal_crc_stm32h7.c  uni_hal_crc_stm32l4.c
src/dma/: uni_hal_dma.h  uni_hal_dma_c.c  uni_hal_dma_enum.h  uni_hal_dma_pc.c  uni_hal_dma_stm32h7.c  uni_hal_dma_stm32h7.h  uni_hal_dma_stm32l4.c  uni_hal_dma_stm32l4.h
src/dwt/: uni_hal_dwt.h  uni_hal_dwt_c.c  uni_hal_dwt_internal.h  uni_hal_dwt_pc.c  uni_hal_dwt_stm32h7.c  uni_hal_dwt_stm32l4.c
src/flash/: uni_hal_flash.h  uni_hal_flash_pc.c  uni_hal_flash_stm32h7.c
src/gpio/: uni_hal_gpio.h  uni_hal_gpio_pc.c  uni_hal_gpio_stm32h7.c  uni_hal_gpio_stm32l4.c
src/i2c/: uni_hal_i2c.h  uni_hal_i2c_c.c  uni_hal_i2c_pc.c  uni_hal_i2c_stm32h7.c  uni_hal_i2c_stm32l4.c
src/io/: uni_hal_io.h  uni_hal_io_c.c  uni_hal_io_nanoprintf_c.c  uni_hal_io_stdio.h  uni_hal_io_stdio_c.c  uni_hal_io_tunnel.h  uni_hal_io_tunnel_c.c
src/iwdg/: uni_hal_iwdg.h  uni_hal_iwdg_c.c  uni_hal_iwdg_pc.c  uni_hal_iwdg_stm32h7.c  uni_hal_iwdg_stm32l4.c
src/libc/: uni_hal_libc_i.c
src/periph/: uni_hal_periph.h  uni_hal_periph_ads1015.h  uni_hal_periph_ads1015_c.c  uni_hal_periph_cy15b064j.h  uni_hal_periph_cy15b064j_c.c  uni_hal_periph_mcp23017.h  uni_hal_periph_mcp23017_c.c
src/pwr/: uni_hal_pwr.h  uni_hal_pwr_c.c  uni_hal_pwr_cm.c  uni_hal_pwr_pc.c  uni_hal_pwr_stm32.c  uni_hal_pwr_stm32.h  uni_hal_pwr_stm32h7.c  uni_hal_pwr_stm32l4.c  uni_hal_pwr_stm32l4.h
src/rcc/: uni_hal_rcc.h  uni_hal_rcc_enum.h  uni_hal_rcc_pc.c  uni_hal_rcc_stm32.h  uni_hal_rcc_stm32h7.c  uni_hal_rcc_stm32h7.h  uni_hal_rcc_stm32l4.c  uni_hal_rcc_stm32l4.h
src/rng/: uni_hal_rng.h  uni_hal_rng_pc.c  uni_hal_rng_stm32h7.c  uni_hal_rng_stm32l4.c
src/segger/: uni_hal_segger_rtt.h  uni_hal_segger_rtt_c.c  uni_hal_segger_rtt_stdio.h  uni_hal_segger_rtt_stdio_c.c
src/spi/: uni_hal_spi.h  uni_hal_spi_c.c  uni_hal_spi_pc.c  uni_hal_spi_stm32h7.c  uni_hal_spi_stm32l4.c
src/systick/: uni_hal_systick.h  uni_hal_systick_cm.c  uni_hal_systick_i.c  uni_hal_systick_pc.c  uni_hal_systick_stm32h7.c
src/tim/: uni_hal_tim.h  uni_hal_tim_c.c  uni_hal_tim_i.c  uni_hal_tim_stm32h7.c  uni_hal_tim_stm32l4.c  uni_hal_time_pc.c
src/uart/: uni_hal_uart.h  uni_hal_uart_c.c  uni_hal_uart_pc.c  uni_hal_uart_stm32h7.c  uni_hal_uart_stm32l4.c
src_tests/: CMakeLists.txt
src_tests/common/ringbuffer/: unimcu_common_ringbuffer_test.cpp
src_tests/dwt/: unimcu_dwt_test.cpp
src_tests/io/: unimcu_io_test.cpp
